--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -59,3 +59,9 @@ footer {
 .new-doc-button button {
   border-radius: 20px;
 }
+
+.main{
+  text-align:center;
+  justify-content:center;
+  display
+}
